--- a/www/templates/records.html
+++ b/www/templates/records.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Historial">
+<ion-view view-title="Historial de {{ objectTypeLabel }}">
     <ion-content class="has-header" padding="true">
         <form name="recordsForm" ng-class="{'show-errors': showErrors}">
             <div class="row responsive-sm">
