--- a/www/templates/maintenance.html
+++ b/www/templates/maintenance.html
@@ -300,9 +300,9 @@
                             <input type="text" required ng-readonly="readOnlyMode" ng-model="maintenance.acceptedBy" ng-model-options="{debounce: 250}" maxlength="50">
                         </label>
                         <label class="item item-input item-signature">
-                            <span class="input-signature">
+                            <div class="input-signature">
                                 <canvas id="signatureCanvas" width="400" height="200" ng-init="prepareCanvas()"></canvas>
-                            </span>
+                            </div>
                         </label>
                         <div class="button-bar">
                             <button type="button" class="button button-energized" ng-click="clearCanvas()" ng-disabled="runningProcess" ng-hide="readOnlyMode">Repetir firma</button>
