--- a/www/templates/maintenance.html
+++ b/www/templates/maintenance.html
@@ -5,7 +5,7 @@
       </ion-nav-back-button>
     </ion-nav-bar>
     <ion-tabs class="tabs-positive tabs-icon-top">
-        <ion-tab title="Cliente" icon="ion-calendar" hidden="{{ !tabs.starterTab}}" on-select="refreshTitle()">
+        <ion-tab title="Cliente" icon="ion-calendar" hidden="{{ !tabs.starterTab }}" on-select="refreshTitle()">
             <ion-scroll>
                 <form name="starterForm" class="maintenance-form" ng-class="{'show-errors': !readOnlyMode}">
                     <div class="list list-inset">
@@ -36,7 +36,7 @@
                 <div class="spacer spacer-footer"></div>
             </ion-scroll>
         </ion-tab>
-        <ion-tab title="Batería" icon="ion-battery-charging" hidden="{{ !tabs.batteryTab}}" on-select="refreshTitle()">
+        <ion-tab title="Batería" icon="ion-battery-charging" hidden="{{ !tabs.batteryTab }}" on-select="refreshTitle()">
             <ion-scroll>
                 <form name="batteryForm" class="maintenance-form" ng-class="{'show-errors': !readOnlyMode}">
                     <div class="list list-inset">
@@ -119,7 +119,7 @@
                 <div class="spacer spacer-footer"></div>
             </ion-scroll>
         </ion-tab>
-        <ion-tab title="Cargador" icon="ion-flash" hidden="{{ !tabs.chargerTab}}" on-select="refreshTitle()">
+        <ion-tab title="Cargador" icon="ion-flash" hidden="{{ !tabs.chargerTab }}" on-select="refreshTitle()">
             <ion-scroll>
                 <form name="chargerForm" class="maintenance-form" ng-class="{'show-errors': !readOnlyMode}">
                     <div class="list list-inset">
@@ -152,7 +152,7 @@
                 <div class="spacer spacer-footer"></div>
             </ion-scroll>
         </ion-tab>
-        <ion-tab title="Máquina" icon="ion-gear-a" hidden="{{ !tabs.machineTab}}" on-select="refreshTitle()">
+        <ion-tab title="Máquina" icon="ion-gear-a" hidden="{{ !tabs.machineTab }}" on-select="refreshTitle()">
             <ion-scroll>
                 <form name="machineForm" class="maintenance-form" ng-class="{'show-errors': !readOnlyMode}">
                     <div class="list list-inset">
@@ -192,7 +192,7 @@
                 <div class="spacer spacer-footer"></div>
             </ion-scroll>
         </ion-tab>
-        <ion-tab title="Labor" icon="ion-hammer" hidden="{{ !tabs.workToBeDoneTab}}" on-select="refreshTitle()">
+        <ion-tab title="Labor" icon="ion-hammer" hidden="{{ !tabs.workToBeDoneTab }}" on-select="refreshTitle()">
             <ion-scroll>
                 <form name="workToBeDoneForm" class="maintenance-form" ng-class="{'show-errors': !readOnlyMode}">
                     <div class="list list-inset">
@@ -204,13 +204,13 @@
                 <div class="spacer spacer-footer"></div>
             </ion-scroll>
         </ion-tab>
-        <ion-tab title="Inspección" icon="ion-clipboard" hidden="{{ !tabs.physicalInspectionTab}}" on-select="refreshTitle()">
+        <ion-tab title="Inspección" icon="ion-clipboard" hidden="{{ !tabs.physicalInspectionTab }}" on-select="refreshTitle()">
             <ion-scroll>
                 <form name="physicalInspectionForm" class="maintenance-form" ng-class="{'show-errors': !readOnlyMode}">
                     <div class="list list-inset">
-                        <div class="item item-icon-right no-padding" ng-repeat="cl in checkList | orderBy: 'checkOrder'">
+                        <div class="item item-icon-right no-padding" ng-repeat="cl in checkList">
                             <label class="item item-input item-select">
-                                <span class="input-label">{{ cl.checkName}}</span>
+                                <span class="input-label">{{ cl.checkName }}</span>
                                 <select required ng-disabled="readOnlyMode" ng-model="cl.diagnosticId" ng-options="d.id as d.name for d in resources.diagnostics | filter: { typeId: cl.diagnosticTypeId }">
                                     <option value=""> </option>
                                 </select>
@@ -223,15 +223,15 @@
                 <div class="spacer spacer-footer"></div>
             </ion-scroll>
         </ion-tab>
-        <ion-tab title="Celdas" icon="ion-battery-empty" hidden="{{ !tabs.cellInspectionTab}}" on-select="refreshTitle()">
+        <ion-tab title="Celdas" icon="ion-battery-empty" hidden="{{ !tabs.cellInspectionTab }}" on-select="refreshTitle()">
             <ion-scroll>
                 <form name="cellInspectionForm" class="maintenance-form" ng-class="{'show-errors': !readOnlyMode}">
                     <div class="list list-inset">
-                        <div class="item item-icon-right no-padding" ng-repeat="cr in reviewOfCells | orderBy: 'cellOrder'">
+                        <div class="item item-icon-right no-padding" ng-repeat="cr in reviewOfCells">
                             <div class="row">
                                 <div class="col">
                                     <label class="item item-input">
-                                        <span class="input-label"># {{ cr.cellOrder}}</span>
+                                        <span class="input-label"># {{ cr.cellOrder }}</span>
                                     </label>
                                 </div>
                                 <div class="col col-40">
@@ -255,7 +255,7 @@
                 <div class="spacer spacer-footer"></div>
             </ion-scroll>
         </ion-tab>
-        <ion-tab title="Insumos" icon="ion-medkit" hidden="{{ !tabs.suppliesTab}}" on-select="refreshTitle()">
+        <ion-tab title="Insumos" icon="ion-medkit" hidden="{{ !tabs.suppliesTab }}" on-select="refreshTitle()">
             <ion-scroll>
                 <form name="suppliesForm" class="maintenance-form" ng-class="{'show-errors': !readOnlyMode}">
                     <div class="list list-inset">
@@ -279,7 +279,7 @@
                 <div class="spacer spacer-footer"></div>
             </ion-scroll>
         </ion-tab>
-        <ion-tab title="Reporte" icon="ion-compose" hidden="{{ !tabs.technicalReportTab}}" on-select="refreshTitle()">
+        <ion-tab title="Reporte" icon="ion-compose" hidden="{{ !tabs.technicalReportTab }}" on-select="refreshTitle()">
             <ion-scroll>
                 <form name="technicalReportForm" class="maintenance-form" ng-class="{'show-errors': !readOnlyMode}">
                     <div class="list list-inset">
@@ -291,7 +291,7 @@
                 <div class="spacer spacer-footer"></div>
             </ion-scroll>
         </ion-tab>
-        <ion-tab title="Visto bueno" icon="ion-checkmark" hidden="{{ !tabs.endingTab}}" on-select="refreshTitle()">
+        <ion-tab title="Visto bueno" icon="ion-checkmark" hidden="{{ !tabs.endingTab }}" on-select="refreshTitle()">
             <ion-content scroll="false">
                 <form name="endingForm" class="maintenance-form" ng-class="{'show-errors': !readOnlyMode}">
                     <div class="list list-inset">
