Agregué rango de fechas válidos para dar de alta ensambles y mantenimientos
Ajusté modo de refresco de los formularios, para mejorar la experiencia del usuario
Preparé en un 50% una mejora en los mensajes al usuario

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -9,6 +9,9 @@
 .tab-item.tab-item-active {
     background-color: #FFBF00;
 }
+.keyboard-open .tabs-hide-on-keyboard-open > .tabs {
+    display: none;
+}
 
 /* FIN TAB PANEL */
 
