--- a/www/templates/customer.html
+++ b/www/templates/customer.html
@@ -1,5 +1,5 @@
 <ion-view title="Nuevo cliente">
-    <ion-content class="has-header" padding="true">
+    <ion-content padding="false" class="has-header">
         <form name="customerForm" ng-class="{'show-errors': showErrors}" ng-submit="save()">
             <div class="row responsive-sm">
                 <div class="col">
