--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,8 +1,8 @@
 <ion-view view-title="Menú principal">
-	<ion-content class="has-header" padding="true">
+	<ion-content padding="false" class="has-header">
 		<img src="img/escol.png" style="width:64%;" />
 		<img src="img/midac1.png" style="width:34%;" />
-		<div class="list">
+		<div class="list list-inset">
 			<div class="item item-divider">
 				Baterías
 			</div>
