--- a/www/templates/notesPopup.html
+++ b/www/templates/notesPopup.html
@@ -5,7 +5,7 @@
             <button class="button button-clear" ng-click="notes.close()">Cerrar</button>
         </div>
     </ion-header-bar>
-    <ion-content padding="true">
+    <ion-content padding="false" class="has-header">
         <form>
             <div class="list">
                 <label class="item item-input">
