--- a/www/templates/tools.html
+++ b/www/templates/tools.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Herramientas">
-    <ion-content class="has-header" padding="true">
-        <div class="list">
+    <ion-content padding="false" class="has-header">
+        <div class="list list-inset">
             <button class="button button-positive button-block" ng-click="synchronizeData()" ng-disabled="runningProcess">Sincronizar datos</button>
             <div class="item item-divider">
                 Eventos
